terraform/alb.tf
resource "aws_alb" "web_alb" {
  name = "${local.name_prefix}-alb"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.web_sg.id]
  subnets = aws_subnet.public[*].id
  tags = {
    Environment = local.environment
    Name = "${local.name_prefix}-alb"
  }
}

resource "aws_lb_target_group" "web_tg" {
  name = "${local.name_prefix}-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.main.id

  health_check {
    path = "/"
    protocol = "HTTP"
    interval = 30
    timeout = 5
    healthy_threshold = 2
    unhealthy_threshold = 2
  }

  tags = {
    Environment = local.environment
    Name = "${local.name_prefix}-tg"
  }
}

resource "aws_lb_listener" "web_listener" {
  load_balancer_arn = aws_alb.web_alb.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.web_tg.arn
  }
}

resource "aws_lb_target_group_attachment" "web_attachment" {
  count = length(aws_instance.web)
  target_group_arn = aws_lb_target_group.web_tg.arn
  target_id = aws_instance.web[count.index].id
  port = 80
}
